--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,7 +6,7 @@
 @import 'tailwindcss/utilities';
 
 @font-face {
-  font-weight: 100 900;
+  font-weight: 200;
   font-family: 'Inter';
   font-style: normal;
   src: url('/fonts/Inter-Regular.woff') format('woff');
@@ -14,7 +14,7 @@
 }
 
 @font-face {
-  font-weight: 100 900;
+  font-weight: 400;
   font-family: 'Inter';
   font-style: normal;
   src: url('/fonts/Inter-Medium.woff') format('woff');
@@ -22,7 +22,7 @@
 }
 
 @font-face {
-  font-weight: 100 900;
+  font-weight: 600;
   font-family: 'Inter';
   font-style: normal;
   src: url('/fonts/Inter-Semibold.woff') format('woff');
@@ -30,7 +30,7 @@
 }
 
 @font-face {
-  font-weight: 100 900;
+  font-weight: 900;
   font-family: 'Inter';
   font-style: normal;
   src: url('/fonts/Inter-Bold.woff') format('woff');
